# calibrated-recommendations

./: .gitignore  calibration.py  calibrationIO.py  calibrationUtils.py  constants.py  distributions.py  dynamic_calibration.ipynb  implementations.ipynb  mappings.py  metrics.py  metrics_test.ipynb  playground.ipynb  pyproject.toml  staticCalibration.py  static_calibration.ipynb  weight_functions.py
artifacts/models/: bpr_mf_movielens_1m.pkl
calibratedRecs/: calibration.py  calibrationIO.py  calibrationUtils.py  constants.py  mappings.py  metrics.py  reranking_utils.py  weight_functions.py
